hphp/hack/test/typecheck/nameof/erased_generic.php
<?hh

class C {}
function f<T as C>(): void {
  nameof T;
}
